Move to Java 8, remove MaxPermSize options